more for the report added, makefile not fully working

--- a/final_report/thesis.tex
+++ b/final_report/thesis.tex
@@ -31,7 +31,12 @@
 
 % Content
 \input{chapters/introduction}
-
+\newpage
+\clearpage
+\input{chapters/background}
+\newpage
+\clearpage
+\input{chapters/related}
 \newpage
 \clearpage
 
