started writing on introduction and clean up report

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -1,18 +1,59 @@
-
-% ARTICLES (FLUID DYNAMICS)
-
-@article{Brody1996,
-author = {Brody, J and Yager, P and Goldstein, R and Austin, R},
-doi = {10.1016/S0006-3495(96)79538-3},
-file = {:D$\backslash$:/MendeleyPapers/Brody et al./1996/Biotechnology at low Reynolds numbers - 1996.pdf:pdf},
-issn = {00063495},
-journal = {Biophysical Journal},
-month = dec,
-number = {6},
-pages = {3430--3441},
-publisher = {Elsevier},
-title = {{Biotechnology at low Reynolds numbers}},
-url = {http://linkinghub.elsevier.com/retrieve/pii/S0006349596795383},
-volume = {71},
-year = {1996}
-} 
+@online{owasp_xss_rank,
+author = {OWASP},
+title = {OWASP Top 10 2013},
+year = {2014},
+url = {https://www.owasp.org/index.php/Top_10_2013-Top_10},
+note = "[Accessed Oct. 21, 2014]"
+}
+@online{owasp_xss,
+author = {OWASP},
+title = {Cross-site Scripting (XSS)},
+year = {2014},
+url = {https://www.owasp.org/index.php/Cross-site_Scripting_(XSS)},
+note = "[Accessed Oct. 21, 2014]"
+}
+@online{excess_xss,
+author = {Kallin, J and Lobo Valbuena, I},
+title = {Excess XSS - A comprehensive tutorial on cross-site scripting},
+year = {2013},
+url = {http://excess-xss.com/},
+note = "[Accessed Oct. 21, 2014]"
+}
+@online{haste-lang,
+  author = {Anton Ekblad},
+  title = {Haste},
+  year = {2014},
+  url = {http://haste-lang.org/}
+}
+@article{haste-symposium,
+  author = {Anton Ekblad and Koen Claessen},
+  title = {A Seamless, Client-Centric Programming Model for Type Safe Web Applications},
+  year = {2014},
+  url = {http://haste-lang.org/haskell14.pdf}
+}
+@online{typescript,
+  author = {Microsoft},
+  title = {TypeScript},
+  year = {2012},
+  url = {http://www.typescriptlang.org/}
+}
+@article{tejas-art,
+  author = {Benjamin S. Lerner and Joe Gibbs Politz and Arjun Guha and Shriram Krishnamurthi},
+  title = {TeJaS: Retrofitting Type Systems for JavaScript},
+  year = {2013},
+  url = {http://cs.brown.edu/~blerner/papers/dls2013_tejas.html}
+}
+@online{tejas-git,
+  title = {TeJaS Git repository},
+  url = {https://github.com/brownplt/TeJaS}
+}
+@online{ghcjs,
+  title = {GHCJS Git repository},
+  url = {https://github.com/ghcjs/ghcjs}
+}
+@online{haskell,
+  author = {Haskellwiki},
+  title = {What is Haskell?},
+  year = {2013},
+  url = {http://www.haskell.org/haskellwiki/Introduction}
+}
