--- a/final_report/include/packagescommands.tex
+++ b/final_report/include/packagescommands.tex
@@ -1,27 +1,27 @@
 \usepackage[utf8]{inputenc}
 \usepackage{pdfpages}
-\usepackage[T1]{fontenc}
+%\usepackage[T1]{fontenc}
 \usepackage[english]{babel}
-\usepackage{amsmath}
-\usepackage{ae}
-\usepackage{icomma}
-\usepackage{units}
-\usepackage{color}
-\usepackage{graphicx}
-\usepackage{epstopdf}
+%\usepackage{amsmath}
+%\usepackage{ae}
+%\usepackage{icomma}
+%\usepackage{units}
+%\usepackage{color}
+%\usepackage{graphicx}
+%\usepackage{epstopdf}
 \usepackage{subfigure}
-\usepackage{bbm}
+%\usepackage{bbm}
 \usepackage{caption}
-\usepackage[square, numbers, sort]{natbib}
-\usepackage{multirow}
+%\usepackage[square, numbers, sort]{natbib}
+%\usepackage{multirow}
 \usepackage{array}
-\usepackage{geometry}
+%\usepackage{geometry}
 \usepackage{fancyhdr}
 \usepackage{fncychap}
-\usepackage[hyphens]{url}
+%\usepackage[hyphens]{url}
 \usepackage[breaklinks,pdfpagelabels=false]{hyperref}
-\usepackage{lettrine}
-\usepackage{eso-pic}
+%\usepackage{lettrine}
+%\usepackage{eso-pic}
 
 \newcommand{\rd}{\ensuremath{\mathrm{d}}}
 \newcommand{\id}{\ensuremath{\,\rd}}
