More for the report added

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -1,20 +1,20 @@
 @online{owasp_xss_rank,
 author = {OWASP},
-title = {OWASP Top 10 2013},
+title = {{OWASP Top 10 2013}},
 year = {2014},
 url = {https://www.owasp.org/index.php/Top_10_2013-Top_10},
 note = "[Accessed Oct. 21, 2014]"
 }
 @online{owasp_xss,
 author = {OWASP},
-title = {Cross-site Scripting (XSS)},
+title = {{Cross-site Scripting (XSS)}},
 year = {2014},
 url = {https://www.owasp.org/index.php/Cross-site_Scripting_(XSS)},
 note = "[Accessed Oct. 21, 2014]"
 }
 @online{excess_xss,
-author = {Kallin, J and Lobo Valbuena, I},
-title = {Excess XSS - A comprehensive tutorial on cross-site scripting},
+author = {Jakob Kallin and Irene Lobo Valbuena},
+title = {{Excess XSS} - A comprehensive tutorial on cross-site scripting},
 year = {2013},
 url = {http://excess-xss.com/},
 note = "[Accessed Oct. 21, 2014]"
@@ -23,11 +23,12 @@ note = "[Accessed Oct. 21, 2014]"
   author = {Anton Ekblad},
   title = {Haste},
   year = {2014},
-  url = {http://haste-lang.org/}
+  url = {http://haste-lang.org/},
+  note = "[Accessed Oct. 24, 2014]"
 }
 @article{haste-symposium,
   author = {Anton Ekblad and Koen Claessen},
-  title = {A Seamless, Client-Centric Programming Model for Type Safe Web Applications},
+  title = {{A Seamless, Client-Centric Programming Model for Type Safe Web Applications}},
   year = {2014},
   url = {http://haste-lang.org/haskell14.pdf}
 }
@@ -35,25 +36,43 @@ note = "[Accessed Oct. 21, 2014]"
   author = {Microsoft},
   title = {TypeScript},
   year = {2012},
-  url = {http://www.typescriptlang.org/}
+  url = {http://www.typescriptlang.org/},
+  note = "[Accessed Oct. 21, 2014]"
 }
 @article{tejas-art,
   author = {Benjamin S. Lerner and Joe Gibbs Politz and Arjun Guha and Shriram Krishnamurthi},
-  title = {TeJaS: Retrofitting Type Systems for JavaScript},
+  title = {{TeJaS: Retrofitting Type Systems for JavaScript}},
   year = {2013},
   url = {http://cs.brown.edu/~blerner/papers/dls2013_tejas.html}
 }
 @online{tejas-git,
-  title = {TeJaS Git repository},
-  url = {https://github.com/brownplt/TeJaS}
+  title = {{TeJaS Git repository}},
+  url = {https://github.com/brownplt/TeJaS},
+  note = "[Accessed Oct. 24, 2014]"
 }
 @online{ghcjs,
-  title = {GHCJS Git repository},
-  url = {https://github.com/ghcjs/ghcjs}
+  title = {{GHCJS Git repository}},
+  url = {https://github.com/ghcjs/ghcjs},
+  note = "[Accessed Oct. 24, 2014]"
 }
 @online{haskell,
   author = {Haskellwiki},
-  title = {What is Haskell?},
+  title = {{What is Haskell?}},
   year = {2013},
-  url = {http://www.haskell.org/haskellwiki/Introduction}
+  url = {http://www.haskell.org/haskellwiki/Introduction},
+  note = "[Accessed Oct. 24, 2014]"
+}
+@online{javascript_popularity,
+  author = {IEEE Spectrum and Stephen Cass and Nick Diakopoulus},
+  title = {{Top 10 Programming Languages}},
+  year = {2014},
+  url = {http://spectrum.ieee.org/computing/software/top-10-programming-languages},
+  note = "[Accessed Oct. 24, 2014]"
+}
+@online{javascript_info,
+  author = {Mozilla},
+  title = {{About JavaScript}},
+  year = {2014},
+  url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/About_JavaScript},
+  note = "[Accessed Oct. 24, 2014]"
 }
