more added to the introduction

--- a/final_report/include/packagescommands.tex
+++ b/final_report/include/packagescommands.tex
@@ -9,9 +9,10 @@
 %\usepackage{color}
 %\usepackage{graphicx}
 %\usepackage{epstopdf}
-\usepackage{subfigure}
+%\usepackage{subfigure}
 %\usepackage{bbm}
 \usepackage{caption}
+\usepackage{subcaption}
 %\usepackage[square, numbers, sort]{natbib}
 %\usepackage{multirow}
 \usepackage{array}
