--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -76,3 +76,9 @@ note = "[Accessed Oct. 21, 2014]"
   url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/About_JavaScript},
   note = "[Accessed Oct. 24, 2014]"
 }
+@article{ifc-jsac,
+  author = {Andrei Sabelfeld and Andrew C. Myers},
+  title = {{Language-Based Information-Flow Security}},
+  year = {2003},
+  url = {http://www.cse.chalmers.se/~andrei/jsac.pdf}
+}
