more written on the introduction, now probably finished

--- a/final_report/include/packagescommands.tex
+++ b/final_report/include/packagescommands.tex
@@ -13,6 +13,7 @@
 %\usepackage{bbm}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{listings}
 %\usepackage[square, numbers, sort]{natbib}
 %\usepackage{multirow}
 \usepackage{array}
