--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -82,3 +82,15 @@ note = "[Accessed Oct. 21, 2014]"
   year = {2003},
   url = {http://www.cse.chalmers.se/~andrei/jsac.pdf}
 }
+@article{js_in_js,
+  author = {Jeff Terrace and Stephen R. Beard and Naga Praveen Kumar Katta},
+  title = {{JavaScript in JavaScript (js.js): Sandboxing third-party scripts}},
+  year = {2012},
+  url = {http://jeffterrace.com/docs/jsjs.pdf}
+}
+@article{caja_spec,
+  author = {Mark S. Miller and Mike Samuel and Ben Laurie and Ihab Awad and Mike Stay},
+  title = {{Caja - Safe active content in sanitized JavaScript}},
+  year = {2008},
+  url = {https://google-caja.googlecode.com/files/caja-spec-2008-06-07.pdf}
+}
