--- a/final_report/thesis.tex
+++ b/final_report/thesis.tex
@@ -42,9 +42,18 @@
 \input{chapters/prototypes}
 \newpage
 \clearpage
+\input{chapters/implementation}
+\newpage
+\clearpage
+\input{chapters/conclusions}
+\newpage
+\clearpage
+\input{chapters/future}
+\newpage
+\clearpage
 
 \bibliography{references} % references.bib
-\addcontentsline{toc}{chapter}{\numberline{} Bibliography} % For pdf
+\addcontentsline{toc}{section}{\numberline{}References} % For pdf, remove \numberline{} ?
 \setspecialhdr
 
 \newpage
