Background and prototypes sections started

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -94,3 +94,29 @@ note = "[Accessed Oct. 21, 2014]"
   year = {2008},
   url = {https://google-caja.googlecode.com/files/caja-spec-2008-06-07.pdf}
 }
+@online{jsflow,
+  author = {Daniel Hedin and Luciano Bello and Andrei Sabelfeld and Arnar Birgisson},
+  title = {JSFlow},
+  year = {2014},
+  url = {http://chalmerslbs.bitbucket.org/jsflow/},
+  note = "[Accessed Oct. 30, 2014]"
+}
+@article{jsflow-csf12,
+  author = {Daniel Hedin and Andrei Sabelfeld},
+  title = {Information-Flow Security for a Core of JavaScript},
+  year = {2012},
+  url = {http://www.cse.chalmers.se/~andrei/jsflow-csf12.pdf}
+}
+@article{jsflow-sac14,
+  author = {Daniel Hedin and Arnar Birgisson and Luciano Bello and Andrei Sabelfeld},
+  title = {JSFlow: Tracking Information Flow in JavaScript and its APIs},
+  year = {2014},
+  url = {http://www.cse.chalmers.se/~andrei/sac14.pdf}
+}
+@online{haskell_edsl,
+  author = {HaskellWiki},
+  title = {Embedded domain specific language},
+  year = {2014},
+  url = {https://www.haskell.org/haskellwiki/Embedded_domain_specific_language},
+  note = "[Accessed Oct. 30, 2014]"
+}
