testing chapter added

--- a/final_report/thesis.tex
+++ b/final_report/thesis.tex
@@ -45,6 +45,9 @@
 \input{chapters/implementation}
 \newpage
 \clearpage
+\input{chapters/testing}
+\newpage
+\clearpage
 \input{chapters/conclusions}
 \newpage
 \clearpage
