more added to the report, mostly implementation

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -120,3 +120,16 @@ note = "[Accessed Oct. 21, 2014]"
   url = {https://www.haskell.org/haskellwiki/Embedded_domain_specific_language},
   note = "[Accessed Oct. 30, 2014]"
 }
+@article{lio-2011,
+  author = {Deian Stefan and Alejandro Russo and John C. Mitchell and David Mazières},
+  title = {Flexible Dynamic Information Flow Control in Haskell},
+  year = {2011},
+  url = {http://www.scs.stanford.edu/~deian/pubs/stefan:2011:flexible.pdf}
+}
+@online{haskell_phantom,
+  author = {HaskellWiki},
+  title = {Phantom type},
+  year = {2013},
+  url = {https://www.haskell.org/haskellwiki/Phantom_type},
+  note = "[Accessed Dec. 8, 2014]"
+}
