--- a/final_report/include/packagescommands.tex
+++ b/final_report/include/packagescommands.tex
@@ -22,6 +22,7 @@
 \usepackage{fncychap}
 %\usepackage[hyphens]{url}
 \usepackage[breaklinks,pdfpagelabels=false]{hyperref}
+\usepackage[titletoc]{appendix}
 %\usepackage{lettrine}
 %\usepackage{eso-pic}
 
