more added to implementation chapter and a new appendix

--- a/final_report/thesis.tex
+++ b/final_report/thesis.tex
@@ -63,6 +63,8 @@
 \cleardoublepage
 \begin{appendices}
   \input{include/appendix_instance}
+  \newpage
+  \input{include/appendix_num}
 \end{appendices}
 %\csname phantomsection\endcsname
 %\addcontentsline{toc}{part}{\appendixname}
