flows in Haskell, non-interference, references added to report

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -133,3 +133,22 @@ note = "[Accessed Oct. 21, 2014]"
   url = {https://www.haskell.org/haskellwiki/Phantom_type},
   note = "[Accessed Dec. 8, 2014]"
 }
+@article{non_interference,
+  author = {Alejandro Russo and Koen Claessen and John Hughes},
+  title = {A Library for Light-Weight Information-Flow Security in Haskell},
+  year = {2008},
+  url = {http://www.cse.chalmers.se/~russo/publications_files/haskell22Ext-russo.pdf}
+}
+@online{if-then-else,
+  author = {HaskellWiki},
+  title = {If-then-else},
+  year = {2008},
+  url = {https://www.haskell.org/haskellwiki/If-then-else},
+  note = "[Accessed Jan. 3, 2015]"
+}
+@online{ascii,
+  title = {{ASCII Table and Desription}},
+  year = {2010},
+  url = {http://www.asciitable.com/},
+  note = "[Accessed Jan. 4, 2015]"
+}
