change name or reference

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -133,7 +133,7 @@ note = "[Accessed Oct. 21, 2014]"
   url = {https://www.haskell.org/haskellwiki/Phantom_type},
   note = "[Accessed Dec. 8, 2014]"
 }
-@article{non_interference,
+@article{seclib,
   author = {Alejandro Russo and Koen Claessen and John Hughes},
   title = {A Library for Light-Weight Information-Flow Security in Haskell},
   year = {2008},
