started writing on related work, seclib

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -139,6 +139,13 @@ note = "[Accessed Oct. 21, 2014]"
   year = {2008},
   url = {http://www.cse.chalmers.se/~russo/publications_files/haskell22Ext-russo.pdf}
 }
+@online{seclib_git,
+  author = {Alejandro Russo},
+  title = {{Seclib GIT}},
+  year = {2014},
+  url = {https://bitbucket.org/russo/seclib/src/},
+  note = "[Accessed Jan. 4, 2015]"
+}
 @online{if-then-else,
   author = {HaskellWiki},
   title = {If-then-else},
