added some motivation in the report

--- a/final_report/thesis.tex
+++ b/final_report/thesis.tex
@@ -39,6 +39,9 @@
 \input{chapters/related}
 \newpage
 \clearpage
+\input{chapters/motivation}
+\newpage
+\clearpage
 \input{chapters/prototypes}
 \newpage
 \clearpage
