changed sentence in background text

--- a/final_report/include/settings.tex
+++ b/final_report/include/settings.tex
@@ -1,4 +1,5 @@
 % References, choose bst-file
+%\bibliographystyle{apa} also import \usepackage[numbers]{natbib} for it to work
 \bibliographystyle{elsart-num}
 
 % PDF Metadata and link styles
