yolo, all of the modified changes to the report added

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -159,3 +159,30 @@ note = "[Accessed Oct. 21, 2014]"
   url = {http://www.asciitable.com/},
   note = "[Accessed Jan. 4, 2015]"
 }
+@online{functor_applicative_monad,
+  author = {HaskellWiki},
+  title = {{Functor-Applicative-Monad Proposal}},
+  year = {2014},
+  url = {https://www.haskell.org/haskellwiki/Functor-Applicative-Monad_Proposal},
+  note = "[Accessed Jan. 19, 2015]"
+}
+@manual{ecma262v5,
+  author = {{ECMA International}},
+  title = {{ECMAScript Language Specification}},
+  year = {2011},
+  url = {http://www.ecma-international.org/publications/files/ECMA-ST/Ecma-262.pdf}
+}
+@online{js_arraybuffer,
+  author = {Mozilla},
+  title = {ArrayBuffer},
+  year = {2014},
+  url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/ArrayBuffer},
+  note = "[Accessed Jan. 28, 2015]"
+}
+@online{ecma_arraybuffer,
+  author = {{ECMA International}},
+  title = {{ECMAScript Language Specification ECMA-262 6th Edition - DRAFT}},
+  year = {2014},
+  url = {https://people.mozilla.org/~jorendorff/es6-draft.html#sec-arraybuffer-constructor},
+  note = "[Accessed Jan. 28, 2015]"
+}
