added more to future work section in report

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -32,6 +32,13 @@ note = "[Accessed Oct. 21, 2014]"
   year = {2014},
   url = {http://haste-lang.org/haskell14.pdf}
 }
+@online{haste-app,
+  author = {Anton Ekblad},
+  title = {Haste.App},
+  year = {2014},
+  url = {https://hackage.haskell.org/package/haste-compiler-0.4.4.1/docs/Haste-App.html},
+  note = "[Accessed Jan. 29, 2015]"
+}
 @online{typescript,
   author = {Microsoft},
   title = {TypeScript},
@@ -185,4 +192,10 @@ note = "[Accessed Oct. 21, 2014]"
   year = {2014},
   url = {https://people.mozilla.org/~jorendorff/es6-draft.html#sec-arraybuffer-constructor},
   note = "[Accessed Jan. 28, 2015]"
+}
+@article{selinq,
+  author = {Daniel Schoepe and Daniel Hedin and Andrei Sabelfeld},
+  title = {{SeLINQ: Tracking Information across Application-Database Boundaries}},
+  year = {2014},
+  url = {http://www.cse.chalmers.se/~schoepe/selinq/selinq_long.pdf}
 }
