added text for Testing part of report

--- a/final_report/include/packagescommands.tex
+++ b/final_report/include/packagescommands.tex
@@ -23,6 +23,8 @@
 %\usepackage[hyphens]{url}
 \usepackage[breaklinks,pdfpagelabels=false]{hyperref}
 \usepackage[titletoc]{appendix}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 %\usepackage{lettrine}
 %\usepackage{eso-pic}
 
