--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -199,3 +199,16 @@ note = "[Accessed Oct. 21, 2014]"
   year = {2014},
   url = {http://www.cse.chalmers.se/~schoepe/selinq/selinq_long.pdf}
 }
+@article{quickcheck,
+  author = {Koen Claessen and John Hughes},
+  title = {{QuickCheck: A Lightweight Tool for Random Testing of Haskell Programs}},
+  year = {2000},
+  url = {http://www.cse.chalmers.se/edu/course/TDA342_Advanced_Functional_Programming/Papers/QuickCheck-claessen.ps}
+}
+@online{quickcheck-wiki,
+  author = {HaskellWiki},
+  title = {{Introduction to QuickCheck}},
+  year = {2013},
+  url = {https://wiki.haskell.org/Introduction_to_QuickCheck1},
+  note = "[Accessed Feb. 2, 2015]"
+}
