--- a/final_report/thesis.tex
+++ b/final_report/thesis.tex
@@ -68,6 +68,8 @@
   \input{include/appendix_instance}
   \newpage
   \input{include/appendix_num}
+  \newpage
+  \input{include/appendix_testing}
 \end{appendices}
 %\csname phantomsection\endcsname
 %\addcontentsline{toc}{part}{\appendixname}
