changed to a chalmers template for the report

--- a/final_report/include/appendix_instance.tex
+++ b/final_report/include/appendix_instance.tex
@@ -1,4 +1,4 @@
-\section{Instance implementation}
+\chapter{Instance implementation}
 \label{app:instances}
 The implementation for Monad, Functor and Applicative for the Flow type became:
 \begin{lstlisting}[language=Haskell]
