--- a/final_report/include/appendix_num.tex
+++ b/final_report/include/appendix_num.tex
@@ -1,4 +1,4 @@
-\section{Num instance in Flow type}
+\chapter{Num instance in Flow type}
 \label{app:num_type}
 \begin{lstlisting}[language=Haskell]
 -- Num instance for Flow
