--- a/final_report/thesis.tex
+++ b/final_report/thesis.tex
@@ -1,5 +1,5 @@
 %% Template from Jonas Einarsson, bror.einarsson.net/chalmersthesistemplate/
-\documentclass[11pt,a4paper]{article}
+\documentclass[11pt,a4paper]{report}
 
 % Packages and commands file
 \input{include/packagescommands}
@@ -53,7 +53,7 @@
 \clearpage
 
 \bibliography{references} % references.bib
-\addcontentsline{toc}{section}{\numberline{}References} % For pdf, remove \numberline{} ?
+\addcontentsline{toc}{chapter}{\numberline{}References} % For pdf, remove \numberline{} ?
 \setspecialhdr
 
 % Appendices
