added more to non-interference and added declassify to background

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -212,3 +212,9 @@ note = "[Accessed Oct. 21, 2014]"
   url = {https://wiki.haskell.org/Introduction_to_QuickCheck1},
   note = "[Accessed Feb. 2, 2015]"
 }
+@article{non-interference-goguen-meseguer,
+  author = {Joseph Goguen and José Meseguer},
+  title = {Security policies and security models},
+  year = {1982},
+  url = {https://www.cs.purdue.edu/homes/ninghui/readings/AccessControl/goguen_meseguer_82.pdf}
+}
