added section about declassification in background

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -218,3 +218,9 @@ note = "[Accessed Oct. 21, 2014]"
   year = {1982},
   url = {https://www.cs.purdue.edu/homes/ninghui/readings/AccessControl/goguen_meseguer_82.pdf}
 }
+@article{declassification-dimensions,
+  author = {Andrei Sabelfeld and David Sands},
+  title = {{Dimensions and Principles of Declassification}},
+  year = {2005},
+  url = {http://www.cse.chalmers.se/~andrei/csfw05.ps}
+}
