added information about integration with Haste

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -224,3 +224,17 @@ note = "[Accessed Oct. 21, 2014]"
   year = {2005},
   url = {http://www.cse.chalmers.se/~andrei/csfw05.ps}
 }
+@online{js-function,
+  author = {Mozilla},
+  title = {function},
+  year = {2015},
+  url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/function},
+  note = "[Accessed Feb. 5, 2015]"
+}
+@online{js-arguments,
+  author = {Mozilla},
+  title = {Arguments object},
+  year = {2014},
+  url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/arguments},
+  note = "[Accessed Feb. 5, 2015]"
+}
