finished (?) related work section

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -238,3 +238,29 @@ note = "[Accessed Oct. 21, 2014]"
   url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/arguments},
   note = "[Accessed Feb. 5, 2015]"
 }
+@book{monad-transformer,
+  author = {Bryan O'Sullivan and Don Stewart and John Goerzen},
+  title = {{Real World Haskell}},
+  publisher = {{O'Reilly Media, Inc, USA}},
+  year = {2008},
+  url = {http://book.realworldhaskell.org/read/monad-transformers.html},
+  note = "[Chapter 18]"
+}
+@article{lmonad,
+  author = {James Parker},
+  title = {{LMonad: Information Flow Control for Haskell Web Applications}},
+  year = {2014},
+  url = {http://jamesparker.me/doc/parker-thesis.pdf}
+}
+@online{yesod,
+  title = {{Yesod Web Framework}},
+  year = {2012},
+  url = {http://www.yesodweb.com/},
+  note = "[Accessed Feb. 5, 2015]"
+}
+@article{rdr,
+  author = {Doaa Hassan and Amr Sabry},
+  title = {{Encoding Secure Information Flow with Restricted Delegation and Revocation in Haskell}},
+  year = {2013},
+  url = {https://www.cs.indiana.edu/~sabry/papers/rdr.pdf}
+}
