more added to implementation part

--- a/final_report/include/packagescommands.tex
+++ b/final_report/include/packagescommands.tex
@@ -11,6 +11,8 @@
 \usepackage[titletoc]{appendix}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{alltt}
+\usepackage{amsmath}
 
 \newcommand{\rd}{\ensuremath{\mathrm{d}}}
 \newcommand{\id}{\ensuremath{\,\rd}}
