--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -264,3 +264,13 @@ note = "[Accessed Oct. 21, 2014]"
   year = {2013},
   url = {https://www.cs.indiana.edu/~sabry/papers/rdr.pdf}
 }
+@online{functor-monad-law,
+  author = {Hackage},
+  url = {http://hackage.haskell.org/package/base-4.7.0.2/docs/Prelude.html#t:Monad},
+  note = "[Accessed Feb. 6, 2015]"
+}
+@online{functor-laws,
+  author = {Hackage},
+  url = {http://hackage.haskell.org/package/base-4.7.0.2/docs/Prelude.html#t:Functor},
+  note = "[Accessed Feb. 6, 2015]"
+}
