added more to future work, end-to-end and features

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -274,3 +274,8 @@ note = "[Accessed Oct. 21, 2014]"
   url = {http://hackage.haskell.org/package/base-4.7.0.2/docs/Prelude.html#t:Functor},
   note = "[Accessed Feb. 6, 2015]"
 }
+@online{json,
+  title = {{Introducing JSON}},
+  url = {http://www.json.org/},
+  note = "[Accessed Feb. 7, 2015]"
+}
