continued implementation part - almost done?

--- a/final_report/thesis.tex
+++ b/final_report/thesis.tex
@@ -59,6 +59,8 @@
 % Appendices
 \cleardoublepage
 \begin{appendices}
+  \input{include/appendix_structure}
+  \newpage
   \input{include/appendix_instance}
   \newpage
   \input{include/appendix_num}
