removed fancyhdr so only chapter is shown at top

--- a/final_report/include/packagescommands.tex
+++ b/final_report/include/packagescommands.tex
@@ -20,8 +20,8 @@
 
 % Fancyheader shortcuts
 \newcommand{\setdefaulthdr}{
-  \fancyhead[L]{\slshape \rightmark}
-  \fancyhead[R]{\slshape \leftmark}
+  %\fancyhead[L]{\slshape \rightmark}
+  %\fancyhead[R]{\slshape \leftmark}
   \fancyfoot[C]{\thepage}
 }
 \newcommand{\setspecialhdr}{
