future work basically done

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -279,3 +279,9 @@ note = "[Accessed Oct. 21, 2014]"
   url = {http://www.json.org/},
   note = "[Accessed Feb. 7, 2015]"
 }
+@online{ioref,
+  title = {{Data.IORef}},
+  author = {Hackage},
+  url = {https://hackage.haskell.org/package/base-4.7.0.2/docs/Data-IORef.html},
+  note = "[Accessed Feb. 12, 2015]"
+}
