more fixes to the report

--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -285,3 +285,9 @@ note = "[Accessed Oct. 21, 2014]"
   url = {https://hackage.haskell.org/package/base-4.7.0.2/docs/Data-IORef.html},
   note = "[Accessed Feb. 12, 2015]"
 }
+@article{haskell-deep-shallow,
+  title = {{Combining Deep and Shallow Embedding for EDSL}},
+  author = {Josef Svenningsson and Emil Axelsson},
+  year = {2013},
+  url = {http://www.cse.chalmers.se/~emax/documents/svenningsson2013combining.pdf}
+}
