--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -291,3 +291,27 @@ note = "[Accessed Oct. 21, 2014]"
   year = {2013},
   url = {http://www.cse.chalmers.se/~emax/documents/svenningsson2013combining.pdf}
 }
+@article{dlm,
+  title = {{Protecting Privacy using the Decentralized Label Model}},
+  author = {Andrew C. Myers and Barbara Liskov},
+  year = {2000},
+  url = {http://www.cs.cornell.edu/andru/papers/iflow-tosem.pdf}
+}
+@online{dlm-site,
+  title = {Decentralized label model},
+  author = {{Cornell University}},
+  url = {https://www.cs.cornell.edu/jif/doc/jif-3.2.0/dlm.html},
+  note = "[Accessed Feb. 13, 2015]"
+}
+@online{haskell-multiparamtypeclasses,
+  title = {Multi-parameter type class},
+  author = {{HaskellWiki}},
+  url = {https://wiki.haskell.org/Multi-parameter_type_class},
+  note = "[Accessed Feb. 13, 2015]"
+}
+@online{haskell-functionaldependencies,
+  title = {Functional dependencies},
+  author = {{HaskellWiki}},
+  url = {https://wiki.haskell.org/Functional_dependencies},
+  note = "[Accessed Feb. 13, 2015]"
+}
